2008-01-08  Akim Demaille  <demaille@gostai.com>

	Free the AST bits that were run.
	* src/runner/runner.cc (Nary): When the top level Nary was processed,
	flush it.
	* src/uconnection.cc: Remove obsolete comments.

2008-01-08  Akim Demaille  <demaille@gostai.com>

	Fix graph generation.
	* dev/ast-graph-gen: Pass srcdir.

2008-01-08  Samuel Tardieu  <tardieu@gostai.com>

	Implement sqr in Urbi rather than in C++.
	* share/urbi/urbi.u: Implement Float.sqr.
	* src/object/float-class.cc: Float.sqr is no longer needed here.

2008-01-08  Akim Demaille  <demaille@gostai.com>

	Start implementing incremental command arrival.
	NOTE: This is a partial fix: since we accumulate the pieces of the
	input but we don't free them, in interactive mode, commands are
	evaluated several times.
	I need to find a means for the runner to flush the commands that
	were completed.
	* src/runner/runner.cc (ast::Function): Store a clone of the function,
	so that we can free the AST without any problem.
	* src/uconnection.cc (received_): Accumulate AST nodes as they arrive.
	Delete the AST when in syntax error.

2008-01-08  Matthieu Nottale  <nottale@gostai.com>

	urbi::UVar synchronous read/write.
	* src/uobject.cc:
	  - Implement echo, UVar::__init in urbi namespace.
	  - implement uvar_get and uvar_set, reading/writting a slot from
	    its "string" name in the uvar: the "object name" part is
	    searched in our uobject hash, the field part is the slot name.
	  - Use the above to implement UVar operator = and cast operators.
	    All casts are made through uvalue_cast and object_cast to avoid
	    code duplication.
	* src/uvalue-cast.cc: Fix mistakenly reverted patch, including
	  uvalue-cast.hh.

2008-01-08  Akim Demaille  <demaille@gostai.com>

	merge -r 2287:2304 https://svn.gostai.com/svn/kernel1/trunk

	2008-01-08  Akim Demaille  <demaille@gostai.com>
	Prefer for to while.
	* src/uconnection.cc (UConnection::initialize): Here.
	And prefer snprintf to sprintf (but both are sick).
